// kSteam custom enums
// TODO: move them into Kotlin enums?

option optimize_for = SPEED;
option java_package = "steam.enums";
option java_multiple_files = true;

enum EProfileCustomizationStyle {
	k_EProfileCustomizationStyleDefault = 0;
	k_EProfileCustomizationStyleSelected = 1;
	k_EProfileCustomizationStyleRarest = 2;
	k_EProfileCustomizationStyleMostRecent = 3;
	k_EProfileCustomizationStyleRandom = 4;
	k_EProfileCustomizationStyleHighestRated = 5;
}

enum EBanContentCheckResult {
	k_EBanContentCheckResult_NotScanned = 0;
	k_EBanContentCheckResult_Reset = 1;
	k_EBanContentCheckResult_NeedsChecking = 2;
	k_EBanContentCheckResult_VeryUnlikely = 5;
	k_EBanContentCheckResult_Unlikely = 30;
	k_EBanContentCheckResult_Possible = 50;
	k_EBanContentCheckResult_Likely = 75;
	k_EBanContentCheckResult_VeryLikely = 100;
}

enum ESteamNotificationType {
	k_ESteamNotificationType_Invalid = 0;
	k_ESteamNotificationType_Test = 1;
	k_ESteamNotificationType_Gift = 2;
	k_ESteamNotificationType_Comment = 3;
	k_ESteamNotificationType_Item = 4;
	k_ESteamNotificationType_FriendInvite = 5;
	k_ESteamNotificationType_MajorSale = 6;
	k_ESteamNotificationType_PreloadAvailable = 7;
	k_ESteamNotificationType_Wishlist = 8;
	k_ESteamNotificationType_TradeOffer = 9;
	k_ESteamNotificationType_General = 10;
	k_ESteamNotificationType_HelpRequest = 11;
	k_ESteamNotificationType_AsyncGame = 12;
	k_ESteamNotificationType_ChatMsg = 13;
	k_ESteamNotificationType_ModeratorMsg = 14;
	k_ESteamNotificationType_ParentalFeatureAccessRequest = 15;
	k_ESteamNotificationType_FamilyInvite = 16;
	k_ESteamNotificationType_FamilyPurchaseRequest = 17;
	k_ESteamNotificationType_ParentalPlaytimeRequest = 18;
	k_ESteamNotificationType_FamilyPurchaseRequestResponse = 19;
	k_ESteamNotificationType_ParentalFeatureAccessResponse = 20;
	k_ESteamNotificationType_ParentalPlaytimeResponse = 21;
	k_ESteamNotificationType_RequestedGameAdded = 22;
	k_ESteamNotificationType_SendToPhone = 23;
	k_ESteamNotificationType_ClipDownloaded = 24;
	k_ESteamNotificationType_2FAPrompt = 25;
	k_ESteamNotificationType_MobileConfirmation = 26;
	k_ESteamNotificationType_PartnerEvent = 27;
}

enum EAuthTokenPlatformType {
	k_EAuthTokenPlatformType_Unknown = 0;
	k_EAuthTokenPlatformType_SteamClient = 1;
	k_EAuthTokenPlatformType_WebBrowser = 2;
	k_EAuthTokenPlatformType_MobileApp = 3;
}

enum EAuthSessionGuardType {
	k_EAuthSessionGuardType_Unknown = 0;
	k_EAuthSessionGuardType_None = 1;
	k_EAuthSessionGuardType_EmailCode = 2;
	k_EAuthSessionGuardType_DeviceCode = 3;
	k_EAuthSessionGuardType_DeviceConfirmation = 4;
	k_EAuthSessionGuardType_EmailConfirmation = 5;
	k_EAuthSessionGuardType_MachineToken = 6;
}

enum EAuthSessionSecurityHistory {
	k_EAuthSessionSecurityHistory_Invalid = 0;
	k_EAuthSessionSecurityHistory_UsedPreviously = 1;
	k_EAuthSessionSecurityHistory_NoPriorHistory = 2;
}

enum EAuthTokenRevokeAction {
	k_EAuthTokenRevokeLogout = 0;
	k_EAuthTokenRevokePermanent = 1;
	k_EAuthTokenRevokeReplaced = 2;
	k_EAuthTokenRevokeSupport = 3;
	k_EAuthTokenRevokeConsume = 4;
}

enum EAuthTokenState {
	k_EAuthTokenState_Invalid = 0;
	k_EAuthTokenState_New = 1;
	k_EAuthTokenState_Confirmed = 2;
	k_EAuthTokenState_Issued = 3;
	k_EAuthTokenState_Denied = 4;
	k_EAuthTokenState_LoggedOut = 5;
	k_EAuthTokenState_Consumed = 6;
	k_EAuthTokenState_Revoked = 99;
}